Return tournament registrations
